scenarios/10-networkpolicy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: ktslab
  labels:
    app: db
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
    - name: pg
      port: 5432
      targetPort: 5432
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: ktslab
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      restartPolicy: Always
      containers:
        - name: db
          image: busybox:1.36
          command: ["/bin/sh", "-c"]
          args: ["echo 'db ready'; sleep 3600"]
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
